--- a/testuikit.html
+++ b/testuikit.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -25,7 +22,7 @@
         <![endif]-->
         
 
-        <div class="uk-grid-medium uk-child-width-expand@s uk-text-center" uk-grid>
+        <div class="uk-grid-medium uk-child-width-expand@s uk-text-left" uk-grid>
             <div>
                 <div class="uk-card uk-card-default uk-card-body">Item</div>
             </div>
