--- a/indexLocation.html
+++ b/indexLocation.html
@@ -323,10 +323,11 @@
     </div>
 
     <!-- This div showcases the located data (when the user clicks on 'frogs near me') -->
-    <div class = "uk-grid-medium uk-grid-match uk-child-width-1-3@m uk-text-left uk-padding" uk-grid></div>
+    <!-- Custom animation https://getuikit.com/docs/scrollspy -->
+    <div class = "uk-grid-medium uk-grid-match uk-child-width-1-3@m uk-text-left uk-padding" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500;"></div>
 
     <!-- The default frogs that show if the user hasnt clicked the  -->
-    <div id = "ifNoItems" class = "uk-grid-small uk-grid-match uk-child-width-1-3@m uk-text-left uk-padding" uk-grid></div>
+    <div id = "ifNoItems" class = "uk-grid-small uk-grid-match uk-child-width-1-3@m uk-text-left uk-padding" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500;"></div>
        
 </body>
 </html>
