--- a/index.html
+++ b/index.html
@@ -125,10 +125,12 @@
         }
 
         .uk-card-default.uk-card-hover:hover {
-            background-color: #EEEEEE;
+            background-color: #DFDFDF;
             -webkit-transition: all 0.4s;
             -moz-transition: all 0.4s;
             transition: all 0.4s;
+            cursor: pointer;
+
         }
 
     </style>
@@ -286,6 +288,7 @@
         function defaultAction() {
             // Use a api query that is limited to 3 results
             defaultUrl = "https://bie.ala.org.au/ws/search.json?q=frog&pageSize=3"
+            console.log("starting");
 
             // Get the json data from querying that url above
             $.getJSON(defaultUrl, function(data){
