--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 
     <!-- Basic Stuff template stuff -->
@@ -234,8 +234,9 @@
                                     // There is hidden information that is shown when the user clicks on the card
                                     $('.uk-grid-medium').append('<div><div class = "uk-card uk-card-default uk-card-body uk-card-hover"> <b>' 
                                     + locationData[i].commonName + '</b><br><p>' +  
-                                    '<br>' + 'There are ' + locationData[i].count +' recordings near you</p> <img src="'+ imgSrc 
-                                    +'"> <p class="hiddenText" style="display: none"> Author: '+ speciesInfo.results[0].author + '<br>' +
+                                    '<br>' + 'There have been ' + locationData[i].count +' frog sightings near you</p> <img src="'+ imgSrc 
+                                    +'" alt="Image of '+ locationData[i].commonName +'"> <p class="hiddenText" style="display: none"> Author: '
+                                    + speciesInfo.results[0].author + '<br>' +
                                     'Genus: ' + speciesInfo.results[0].genus + '<br>' + 'Name: '+ speciesInfo.results[0].name  +
                                     '<br> Class: '+ speciesInfo.results[0].class +'</p>' +
                                     '<div class="audio" style="display:none"><audio controls source src="' + soundFileUrl + '" ></audio></div></div></div>' );
@@ -303,7 +304,7 @@
                     // Append each of these frogs to the webpage
                     // include the name, image and hide the common name 
                     $('#ifNoItems').append('<div><div class = "uk-card uk-card-default uk-card-body uk-card-hover"><b>' + defaultFrog[i].name + '</b><br><br>' + '<img src="' + defaultFrog[i].imageUrl 
-                        + '"> <p class="hiddenText" style="display: none"> Common Name: '+ defaultFrog[i].commonNameSingle + '</p></div></div>' )
+                        + '" alt = "Image of '+ defaultFrog[i].commonNameSingle +'"> <p class="hiddenText" style="display: none"> Common Name: '+ defaultFrog[i].commonNameSingle + '</p></div></div>' )
                 }
             })
         }
