--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         h3 {
             font-family: 'Poppins' !important;
             font-weight: 700;
-            font-size: 20px;
+            font-size: 20px; 
         }
 
         /* Sets the font size for the body text */
@@ -132,6 +132,14 @@
             transition: all 0.4s;
             cursor: pointer;
 
+        }
+
+        /* Styles the footer to a green colour and   */
+        footer {
+        background-color: #D8F3DC;
+        padding: 50px;
+        text-align: center;
+        color: #081C15;
         }
 
     </style>
@@ -313,30 +321,40 @@
 
 </script>
 
-    <!-- Create a div called top, this is always shown regardless what frogs are returned -->
-    <div id = "top">
-        <!-- Split up the title so that words can appear on top of each other -->
-        <!-- Give the 'of' text emphasis (This results in a different colour and size) -->
-        <div class ="heading1">
-            <h1>Frogs</h1> 
-            <em>of</em>
-        </div> 
-        <h1>Australia</h1>
+    <header>
+        <!-- Create a div called top, this is always shown regardless what frogs are returned -->
+        <div id = "top">
+            <!-- Split up the title so that words can appear on top of each other -->
+            <!-- Give the 'of' text emphasis (This results in a different colour and size) -->
+            <div class ="heading1">
+                <h1>Frogs</h1> 
+                <em>of</em>
+            </div> 
+            <h1>Australia</h1>
 
-        <!-- Create a button that shows frogs near the user  -->
-        <!-- If clicked status provides the user with a 'locating ' -->
-        <!-- If clicked this div will show where the user is currently located -->
-        <button id = "findMe">Show frogs near me</button> <br/>
-            <p id = "status"></p>
-            <div id = "currentLocation"></div>
+            <!-- Create a button that shows frogs near the user  -->
+            <!-- If clicked status provides the user with a 'locating ' -->
+            <!-- If clicked this div will show where the user is currently located -->
+            <button id = "findMe">Show frogs near me</button> <br/>
+                <p id = "status"></p>
+                <div id = "currentLocation"></div>
 
-    </div>
+        </div>
 
-    <!-- This div showcases the located data (when the user clicks on 'frogs near me') -->
-    <div class = "uk-grid-medium uk-grid-match uk-child-width-1-3@m uk-text-left uk-padding" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500;"></div>
+    </header>
 
-    <!-- The default frogs that show if the user hasnt clicked the  -->
-    <div id = "ifNoItems" class = "uk-grid-small uk-grid-match uk-child-width-1-3@m uk-text-left uk-padding" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500;"></div>
-       
+    <main>
+        <!-- This div showcases the located data (when the user clicks on 'frogs near me') -->
+        <div class = "uk-grid-medium uk-grid-match uk-child-width-1-3@m uk-text-left uk-padding" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500;"></div>
+
+        <!-- The default frogs that show if the user hasnt clicked the  -->
+        <div id = "ifNoItems" class = "uk-grid-small uk-grid-match uk-child-width-1-3@m uk-text-left uk-padding" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500;"></div>
+    </main>    
+
+    <!-- Footer with attributions -->
+    <footer>
+        This website was produced by students in the Faculty of Arts &amp; Design, University of Canberra, 2021.
+    </footer>
+
 </body>
 </html>
