--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         function defaultAction() {
             // Use an api query that is limited to 3 results
             defaultUrl = "https://bie.ala.org.au/ws/search.json?q=frog&pageSize=3"
-            console.log("starting");
+            // console.log("starting");
 
             // Get the json data from querying that url above
             $.getJSON(defaultUrl, function(data){
